# perk

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  check_output.py  gen_small_workload.py  prun_client.sh  run_benchmark.sh  run_client.sh  run_server.sh  testin
cmake_find/: FindLibmemcached.cmake
src/: bm.h  ck_hash.c  ck_hash.h  client.c  client.h  client_mcd.c  client_w_rc.c  client_w_sd.c  client_wimm_sd.c  clients.c  clients.h  rdma.c  rdma.h  server.c  server.h  server_sd_sd.c  server_w_rc.c  server_w_sd.c  server_wimm_sd.c  util.c  util.h  workers.c  workers.h
thesis/: perk.pdf:Zone.Identifier
util/: check_output.py  count_reads.py  gen_scale_graph.plg  gen_small_workload.py  kill_server.py  read_benchmarks.py  read_cycles.py  setup_rdma.sh
